# hedgehog-golden

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hedgehog-golden.cabal  shell.nix  stack.yaml
.github/workflows/: haskell.yml
golden/: Bool.json  Char.json  Char.json.gen  HigherKinded_Int.json  Seq_Char.json
hedgehog-golden/: hedgehog-golden.cabal
hedgehog-golden-aeson/: hedgehog-golden-aeson.cabal
hedgehog-golden-aeson/src/Hedgehog/: Golden.hs
hedgehog-golden-aeson/src/Hedgehog/Golden/: Aeson.hs  Sample.hs
hedgehog-golden/src/Hedgehog/: Golden.hs
hedgehog-golden/src/Hedgehog/Golden/: Aeson.hs  IO.hs  Types.hs
hedgehog-golden/src/Hedgehog/Golden/Internal/: Source.hs
hedgehog-golden/test/: Main.hs
src/Hedgehog/: Golden.hs
src/Hedgehog/Golden/: Aeson.hs  Sample.hs  Types.hs
src/Hedgehog/Golden/Internal/: Source.hs
test/: Main.hs
