cabal-version: 2.4

version:
  1.0.2
name:
  hedgehog-golden
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
synopsis:
  Golden testing capabilities for hedgehog using Aeson
description:
  Golden testing capabilities for hedgehog using Aeson.
  Generates pretty output in cases of errors and uses
  Hedgehog to eat all your bugs!
homepage:
  https://github.com/felixmulder/hedgehog-golden
bug-reports:
  https://github.com/felixmulder/hedgehog-golden/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
category:
  Testing
extra-source-files:
  CHANGELOG.md
  README.md
data-files:    golden/*.json

source-repository head
  type: git
  location: git://github.com/felixmulder/hedgehog-golden.git

common options
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Wredundant-constraints -fhide-source-paths
  default-extensions:
    GeneralizedNewtypeDeriving
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

library
  import:
    options
  hs-source-dirs:
    src
  exposed-modules:
    Hedgehog.Golden.Aeson
  other-modules:
    Hedgehog.Golden.Types
    Hedgehog.Golden.Sample
    Hedgehog.Golden.Internal.Source
  build-depends:
    , aeson
    , aeson-pretty
    , base >=4.12.0.0
    , bytestring
    , containers
    , Diff
    , directory
    , extra
    , hedgehog
    , text

test-suite test
  import:
    options
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
  build-depends:
    , aeson
    , base >=4.12.0.0
    , hedgehog
    , hedgehog-golden
