cabal-version: 2.4

version:
  0.0.1
name:
  hedgehog-golden-aeson
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
synopsis:
  Golden testing capabilities for hedgehog using Aeson
description:
  Golden testing capabilities for hedgehog using Aeson
homepage:
  https://github.com/felixmulder/hedgehog-golden
bug-reports:
  https://github.com/felixmulder/hedgehog-golden/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
category:
  Testing
extra-source-files:
  CHANGELOG.md

library
  build-depends:
    base ^>=4.12.0.0
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  exposed-modules:
    Hedgehog.Golden.Aeson
