cabal-version: 2.4

version:
  0.0.1
name:
  hedgehog-golden-aeson
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
synopsis:
  Golden testing capabilities for hedgehog using Aeson
description:
  Golden testing capabilities for hedgehog using Aeson
homepage:
  https://github.com/felixmulder/hedgehog-golden
bug-reports:
  https://github.com/felixmulder/hedgehog-golden/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
category:
  Testing
extra-source-files:
  CHANGELOG.md

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Werror -Wredundant-constraints -fhide-source-paths
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  exposed-modules:
    Hedgehog.Golden.Aeson
  build-depends:
    , aeson ^>= 1.4.4.0
    , aeson-pretty ^>= 0.8.7
    , base ^>=4.12.0.0
    , bytestring ^>=0.10.10.0
    , directory ^>=1.3.4.0
    , extra ^>= 1.6.0
    , hedgehog ^>= 1.0
    , hedgehog-golden ^>= 0.0.0
    , containers ^>=0.6.2.1
