cabal-version: 2.4

version:
  0.0.1
name:
  hedgehog-golden
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
synopsis:
  Golden testing capabilities for hedgehog
description:
  Golden testing capabilities for hedgehog
homepage:
  https://github.com/felixmulder/hedgehog-golden
bug-reports:
  https://github.com/felixmulder/hedgehog-golden/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
category:
  Testing
extra-source-files:
  CHANGELOG.md

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Werror -Wredundant-constraints -fhide-source-paths
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  exposed-modules:
    Hedgehog.Golden.IO
  build-depends:
      base ^>=4.12.0.0
    , Diff ^>=0.3.0
    , text ^>=1.2.0.0
    , hedgehog ^>=1.0
    , directory ^>=1.3.4.0
    , extra ^>=1.6.0
