cabal-version: 2.4

version:
  0.0.1
name:
  hedgehog-golden
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
synopsis:
  Golden testing capabilities for hedgehog using Aeson
description:
  Golden testing capabilities for hedgehog using Aeson
homepage:
  https://github.com/felixmulder/hedgehog-golden
bug-reports:
  https://github.com/felixmulder/hedgehog-golden/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
category:
  Testing
extra-source-files:
  CHANGELOG.md

common options
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Werror -Wredundant-constraints -fhide-source-paths
  default-extensions:
    GeneralizedNewtypeDeriving
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

library
  import:
    options
  hs-source-dirs:
    src
  exposed-modules:
    Hedgehog.Golden
    Hedgehog.Golden.Aeson
    Hedgehog.Golden.Types
    Hedgehog.Golden.Sample
    Hedgehog.Golden.Internal.Source
  build-depends:
    , aeson ^>= 1.4.4.0
    , aeson-pretty ^>= 0.8.7
    , base ^>=4.12.0.0
    , bytestring ^>=0.10.10.0
    , containers ^>=0.6.2.1
    , Diff ^>=0.3.4
    , directory ^>=1.3.4.0
    , extra ^>= 1.6.0
    , hedgehog ^>= 1.0
    , text ^>=1.2.3.1

test-suite test
  import:
    options
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
  build-depends:
    , base ^>=4.12.0.0
    , hedgehog ^>= 1.0
    , hedgehog-golden
